# ChangeLog for dev-java/commons-dbcp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/ChangeLog,v 1.67 2015/03/20 16:18:45 monsieurp Exp $

  20 Mar 2015; Patrice Clement <monsieurp@gentoo.org> commons-dbcp-2.1.ebuild:
  EAPI 5 bump while we're at it.

  20 Mar 2015; Patrice Clement <monsieurp@gentoo.org> commons-dbcp-2.1.ebuild:
  Remove slotted virtual dep in lieu of a "normal" one. We pull in at least
  jdk/jre 6 since 7 is not stable yet in the tree.

*commons-dbcp-2.1 (20 Mar 2015)

  20 Mar 2015; Patrice Clement <monsieurp@gentoo.org> +commons-dbcp-2.1.ebuild,
  commons-dbcp-1.4-r2.ebuild:
  Version bump to v2.1. Drop ~ppc and ~ppc64 arch (no jdk-1.7 nor commons-pool
  for these archs yet). Add SLOT. Fix bug 496110.

  03 Aug 2014; Ralph Sennhauser <sera@gentoo.org>
  -commons-dbcp-1.2.2-r1.ebuild, -commons-dbcp-1.4-r1.ebuild:
  Remove old

  07 Jun 2012; Brent Baude <ranger@gentoo.org> commons-dbcp-1.4-r2.ebuild:
  Marking commons-dbcp-1.4-r2 ppc for bug 348594

  05 Jun 2012; Brent Baude <ranger@gentoo.org> commons-dbcp-1.4-r2.ebuild:
  Marking commons-dbcp-1.4-r2 ppc64 for bug 348594

  31 May 2012; Jeff Horelick <jdhore@gentoo.org> commons-dbcp-1.4-r2.ebuild:
  marked x86 per bug 348594

  30 May 2012; Agostino Sarubbo <ago@gentoo.org> commons-dbcp-1.4-r2.ebuild:
  Stable for amd64, wrt bug #348594

*commons-dbcp-1.4-r2 (25 May 2012)

  25 May 2012; Ralph Sennhauser <sera@gentoo.org> +commons-dbcp-1.4-r2.ebuild:
  Revbump, add missing deps, drop unused deps, fixes #205245.
  Fix generating javadocs.
  EAPI bump and make better use of eclasses.
  Disable test depending on unpackaged geronimo. #348853
  Disble one failing test as this version is already stable on some archs.

  12 Mar 2012; Brent Baude <ranger@gentoo.org> commons-dbcp-1.4-r1.ebuild:
  Marking commons-dbcp-1.4-r1 ppc64 for bug 348594

  10 Mar 2012; Brent Baude <ranger@gentoo.org> commons-dbcp-1.4-r1.ebuild: