@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install preinst prepare setup test
-DEPEND=>=dev-java/commons-logging-1.1.1 dev-java/commons-pool:2 java-virtuals/transaction-api:0 dev-java/junit:4 >=virtual/jdk-1.6 test? ( dev-java/ant-junit:0 ) >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
+DEPEND=>=dev-java/commons-logging-1.1.1 dev-java/commons-pool:2 java-virtuals/transaction-api:0 dev-java/junit:4 >=virtual/jdk-1.7 test? ( dev-java/ant-junit:0 ) >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
 DESCRIPTION=Jakarta component providing database connection pooling API
 EAPI=5
 HOMEPAGE=http://commons.apache.org/dbcp/
 IUSE=elibc_FreeBSD doc source test elibc_FreeBSD
 KEYWORDS=~x86 ~amd64 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris
 LICENSE=Apache-2.0
-RDEPEND=>=virtual/jdk-1.6 >=dev-java/commons-logging-1.1.1 dev-java/commons-pool:2 java-virtuals/transaction-api:0 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+RDEPEND=>=virtual/jdk-1.7 >=dev-java/commons-logging-1.1.1 dev-java/commons-pool:2 java-virtuals/transaction-api:0 dev-java/junit:4 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
 SLOT=2
 SRC_URI=mirror://apache/commons/dbcp/source/commons-dbcp2-2.1-src.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=ad3fe2dd63e2d6065cdf22a26420af5c
+_md5_=628185874746e092dd431e2ef7cd2768
