@@ -1,6 +1,9 @@
 # ChangeLog for the default/linux/uclibc profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default/linux/uclibc/ChangeLog,v 1.9 2015/03/28 23:22:49 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default/linux/uclibc/ChangeLog,v 1.10 2015/03/29 00:32:37 blueness Exp $
+
+  29 Mar 2015; Anthony G. Basile <blueness@gentoo.org> mips/package.mask:
+  Fix bad atom.
 
   28 Mar 2015; Anthony G. Basile <blueness@gentoo.org> mips/package.mask:
   Mask gcc-4.9 and above on mips because of bug #544756.
